Compiler.output
Terminals unused in grammar

   INCLUDE


State 57 conflicts: 1 shift/reduce
State 58 conflicts: 1 shift/reduce, 12 reduce/reduce
State 65 conflicts: 2 shift/reduce
State 66 conflicts: 2 shift/reduce
State 67 conflicts: 2 shift/reduce
State 68 conflicts: 2 shift/reduce
State 69 conflicts: 2 shift/reduce
State 70 conflicts: 2 shift/reduce
State 71 conflicts: 2 shift/reduce
State 72 conflicts: 2 shift/reduce
State 73 conflicts: 2 shift/reduce
State 74 conflicts: 2 shift/reduce
State 75 conflicts: 2 shift/reduce
State 76 conflicts: 2 shift/reduce
State 77 conflicts: 2 shift/reduce
State 78 conflicts: 2 shift/reduce
State 79 conflicts: 2 shift/reduce


Grammar

    0 $accept: pgmstart $end

    1 pgmstart: TYPE ID '(' ')' STMTS

    2 STMTS: '{' STMT1 '}'

    3 STMT1: STMT STMT1
    4      | %empty

    5 STMT: STMT_DECLARE
    6     | STMT_ASSGN
    7     | STMT_IF
    8     | STMT_WHILE
    9     | STMT_SWITCH
   10     | ';'

   11 STMT_DECLARE: TYPE ID IDS

   12 STMT_ASSGN: ID ASGN EXP ';'

   13 STMT_IF: IF EXP STMT
   14        | IF EXP STMT ELSE_STMT
   15        | IF EXP STMTS ELSE_STMT

   16 ELSE_STMT: ELSE STMT
   17          | ELSE STMTS
   18          | %empty

   19 STMT_WHILE: WHILE EXP WHILEBODY

   20 WHILEBODY: STMTS
   21          | STMT

   22 STMT_SWITCH: SWITCH EXP '{' SWITCHBODY '}'

   23 SWITCHBODY: CASES
   24           | CASES DEFAULTSTMT

   25 CASES: CASE NUM ':' SWITCHEXP BREAKSTMT
   26      | %empty

   27 BREAKSTMT: BREAK ';' CASES
   28          | CASES

   29 DEFAULTSTMT: DEFAULT ':' SWITCHEXP DE

   30 DE: BREAK ';'
   31   | %empty

   32 SWITCHEXP: STMTS
   33          | STMT

   34 IDS: ';'
   35    | ',' ID IDS

   36 TYPE: INT
   37     | FLOAT
   38     | VOID

   39 EXP: EXP LT EXP
   40    | EXP LE EXP
   41    | EXP GT EXP
   42    | EXP GE EXP
   43    | EXP NE EXP
   44    | EXP EQ EXP
   45    | EXP '+' EXP
   46    | EXP '-' EXP
   47    | EXP '*' EXP
   48    | EXP '/' EXP
   49    | EXP LOR EXP
   50    | EXP LAND EXP
   51    | EXP BOR EXP
   52    | EXP BXOR EXP
   53    | EXP BAND EXP
   54    | EXP INC
   55    | EXP DEC
   56    | '(' EXP ')'
   57    | ID
   58    | NUM
   59    | DNUM


Terminals, with rules where they appear

$end (0) 0
'(' (40) 1 56
')' (41) 1 56
'*' (42) 47
'+' (43) 45
',' (44) 35
'-' (45) 46
'/' (47) 48
':' (58) 25 29
';' (59) 10 12 27 30 34
'{' (123) 2 22
'}' (125) 2 22
error (256)
INT (258) 36
FLOAT (259) 37
VOID (260) 38
WHILE (261) 19
IF (262) 13 14 15
ELSE (263) 16 17
SWITCH (264) 22
CASE (265) 25
BREAK (266) 27 30
DEFAULT (267) 29
NUM (268) 25 58
DNUM (269) 59
ID (270) 1 11 12 35 57
INCLUDE (271)
INC (272) 54
DEC (273) 55
ASGN (274) 12
LOR (275) 49
LAND (276) 50
BOR (277) 51
BXOR (278) 52
BAND (279) 53
EQ (280) 44
NE (281) 43
LE (282) 40
GE (283) 42
LT (284) 39
GT (285) 41


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
pgmstart (43)
    on left: 1, on right: 0
STMTS (44)
    on left: 2, on right: 1 15 17 20 32
STMT1 (45)
    on left: 3 4, on right: 2 3
STMT (46)
    on left: 5 6 7 8 9 10, on right: 3 13 14 16 21 33
STMT_DECLARE (47)
    on left: 11, on right: 5
STMT_ASSGN (48)
    on left: 12, on right: 6
STMT_IF (49)
    on left: 13 14 15, on right: 7
ELSE_STMT (50)
    on left: 16 17 18, on right: 14 15
STMT_WHILE (51)
    on left: 19, on right: 8
WHILEBODY (52)
    on left: 20 21, on right: 19
STMT_SWITCH (53)
    on left: 22, on right: 9
SWITCHBODY (54)
    on left: 23 24, on right: 22
CASES (55)
    on left: 25 26, on right: 23 24 27 28
BREAKSTMT (56)
    on left: 27 28, on right: 25
DEFAULTSTMT (57)
    on left: 29, on right: 24
DE (58)
    on left: 30 31, on right: 29
SWITCHEXP (59)
    on left: 32 33, on right: 25 29
IDS (60)
    on left: 34 35, on right: 11 35
TYPE (61)
    on left: 36 37 38, on right: 1 11
EXP (62)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58 59, on right: 12 13 14 15 19 22 39 40 41 42 43 44 45 46 47
    48 49 50 51 52 53 54 55 56


State 0

    0 $accept: . pgmstart $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    pgmstart  go to state 4
    TYPE      go to state 5


State 1

   36 TYPE: INT .

    $default  reduce using rule 36 (TYPE)


State 2

   37 TYPE: FLOAT .

    $default  reduce using rule 37 (TYPE)


State 3

   38 TYPE: VOID .

    $default  reduce using rule 38 (TYPE)


State 4

    0 $accept: pgmstart . $end

    $end  shift, and go to state 6


State 5

    1 pgmstart: TYPE . ID '(' ')' STMTS

    ID  shift, and go to state 7


State 6

    0 $accept: pgmstart $end .

    $default  accept


State 7

    1 pgmstart: TYPE ID . '(' ')' STMTS

    '('  shift, and go to state 8


State 8

    1 pgmstart: TYPE ID '(' . ')' STMTS

    ')'  shift, and go to state 9


State 9

    1 pgmstart: TYPE ID '(' ')' . STMTS

    '{'  shift, and go to state 10

    STMTS  go to state 11


State 10

    2 STMTS: '{' . STMT1 '}'

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    WHILE   shift, and go to state 12
    IF      shift, and go to state 13
    SWITCH  shift, and go to state 14
    ID      shift, and go to state 15
    ';'     shift, and go to state 16

    $default  reduce using rule 4 (STMT1)

    STMT1         go to state 17
    STMT          go to state 18
    STMT_DECLARE  go to state 19
    STMT_ASSGN    go to state 20
    STMT_IF       go to state 21
    STMT_WHILE    go to state 22
    STMT_SWITCH   go to state 23
    TYPE          go to state 24


State 11

    1 pgmstart: TYPE ID '(' ')' STMTS .

    $default  reduce using rule 1 (pgmstart)


State 12

   19 STMT_WHILE: WHILE . EXP WHILEBODY

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 29


State 13

   13 STMT_IF: IF . EXP STMT
   14        | IF . EXP STMT ELSE_STMT
   15        | IF . EXP STMTS ELSE_STMT

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 30


State 14

   22 STMT_SWITCH: SWITCH . EXP '{' SWITCHBODY '}'

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 31


State 15

   12 STMT_ASSGN: ID . ASGN EXP ';'

    ASGN  shift, and go to state 32


State 16

   10 STMT: ';' .

    $default  reduce using rule 10 (STMT)


State 17

    2 STMTS: '{' STMT1 . '}'

    '}'  shift, and go to state 33


State 18

    3 STMT1: STMT . STMT1

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    WHILE   shift, and go to state 12
    IF      shift, and go to state 13
    SWITCH  shift, and go to state 14
    ID      shift, and go to state 15
    ';'     shift, and go to state 16

    $default  reduce using rule 4 (STMT1)

    STMT1         go to state 34
    STMT          go to state 18
    STMT_DECLARE  go to state 19
    STMT_ASSGN    go to state 20
    STMT_IF       go to state 21
    STMT_WHILE    go to state 22
    STMT_SWITCH   go to state 23
    TYPE          go to state 24


State 19

    5 STMT: STMT_DECLARE .

    $default  reduce using rule 5 (STMT)


State 20

    6 STMT: STMT_ASSGN .

    $default  reduce using rule 6 (STMT)


State 21

    7 STMT: STMT_IF .

    $default  reduce using rule 7 (STMT)


State 22

    8 STMT: STMT_WHILE .

    $default  reduce using rule 8 (STMT)


State 23

    9 STMT: STMT_SWITCH .

    $default  reduce using rule 9 (STMT)


State 24

   11 STMT_DECLARE: TYPE . ID IDS

    ID  shift, and go to state 35


State 25

   58 EXP: NUM .

    $default  reduce using rule 58 (EXP)


State 26

   59 EXP: DNUM .

    $default  reduce using rule 59 (EXP)


State 27

   57 EXP: ID .

    $default  reduce using rule 57 (EXP)


State 28

   56 EXP: '(' . EXP ')'

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 36


State 29

   19 STMT_WHILE: WHILE EXP . WHILEBODY
   39 EXP: EXP . LT EXP
   40    | EXP . LE EXP
   41    | EXP . GT EXP
   42    | EXP . GE EXP
   43    | EXP . NE EXP
   44    | EXP . EQ EXP
   45    | EXP . '+' EXP
   46    | EXP . '-' EXP
   47    | EXP . '*' EXP
   48    | EXP . '/' EXP
   49    | EXP . LOR EXP
   50    | EXP . LAND EXP
   51    | EXP . BOR EXP
   52    | EXP . BXOR EXP
   53    | EXP . BAND EXP
   54    | EXP . INC
   55    | EXP . DEC

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    WHILE   shift, and go to state 12
    IF      shift, and go to state 13
    SWITCH  shift, and go to state 14
    ID      shift, and go to state 15
    INC     shift, and go to state 37
    DEC     shift, and go to state 38
    LOR     shift, and go to state 39
    LAND    shift, and go to state 40
    BOR     shift, and go to state 41
    BXOR    shift, and go to state 42
    BAND    shift, and go to state 43
    EQ      shift, and go to state 44
    NE      shift, and go to state 45
    LE      shift, and go to state 46
    GE      shift, and go to state 47
    LT      shift, and go to state 48
    GT      shift, and go to state 49
    '+'     shift, and go to state 50
    '-'     shift, and go to state 51
    '*'     shift, and go to state 52
    '/'     shift, and go to state 53
    '{'     shift, and go to state 10
    ';'     shift, and go to state 16

    STMTS         go to state 54
    STMT          go to state 55
    STMT_DECLARE  go to state 19
    STMT_ASSGN    go to state 20
    STMT_IF       go to state 21
    STMT_WHILE    go to state 22
    WHILEBODY     go to state 56
    STMT_SWITCH   go to state 23
    TYPE          go to state 24


State 30

   13 STMT_IF: IF EXP . STMT
   14        | IF EXP . STMT ELSE_STMT
   15        | IF EXP . STMTS ELSE_STMT
   39 EXP: EXP . LT EXP
   40    | EXP . LE EXP
   41    | EXP . GT EXP
   42    | EXP . GE EXP
   43    | EXP . NE EXP
   44    | EXP . EQ EXP
   45    | EXP . '+' EXP
   46    | EXP . '-' EXP
   47    | EXP . '*' EXP
   48    | EXP . '/' EXP
   49    | EXP . LOR EXP
   50    | EXP . LAND EXP
   51    | EXP . BOR EXP
   52    | EXP . BXOR EXP
   53    | EXP . BAND EXP
   54    | EXP . INC
   55    | EXP . DEC

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    WHILE   shift, and go to state 12
    IF      shift, and go to state 13
    SWITCH  shift, and go to state 14
    ID      shift, and go to state 15
    INC     shift, and go to state 37
    DEC     shift, and go to state 38
    LOR     shift, and go to state 39
    LAND    shift, and go to state 40
    BOR     shift, and go to state 41
    BXOR    shift, and go to state 42
    BAND    shift, and go to state 43
    EQ      shift, and go to state 44
    NE      shift, and go to state 45
    LE      shift, and go to state 46
    GE      shift, and go to state 47
    LT      shift, and go to state 48
    GT      shift, and go to state 49
    '+'     shift, and go to state 50
    '-'     shift, and go to state 51
    '*'     shift, and go to state 52
    '/'     shift, and go to state 53
    '{'     shift, and go to state 10
    ';'     shift, and go to state 16

    STMTS         go to state 57
    STMT          go to state 58
    STMT_DECLARE  go to state 19
    STMT_ASSGN    go to state 20
    STMT_IF       go to state 21
    STMT_WHILE    go to state 22
    STMT_SWITCH   go to state 23
    TYPE          go to state 24


State 31

   22 STMT_SWITCH: SWITCH EXP . '{' SWITCHBODY '}'
   39 EXP: EXP . LT EXP
   40    | EXP . LE EXP
   41    | EXP . GT EXP
   42    | EXP . GE EXP
   43    | EXP . NE EXP
   44    | EXP . EQ EXP
   45    | EXP . '+' EXP
   46    | EXP . '-' EXP
   47    | EXP . '*' EXP
   48    | EXP . '/' EXP
   49    | EXP . LOR EXP
   50    | EXP . LAND EXP
   51    | EXP . BOR EXP
   52    | EXP . BXOR EXP
   53    | EXP . BAND EXP
   54    | EXP . INC
   55    | EXP . DEC

    INC   shift, and go to state 37
    DEC   shift, and go to state 38
    LOR   shift, and go to state 39
    LAND  shift, and go to state 40
    BOR   shift, and go to state 41
    BXOR  shift, and go to state 42
    BAND  shift, and go to state 43
    EQ    shift, and go to state 44
    NE    shift, and go to state 45
    LE    shift, and go to state 46
    GE    shift, and go to state 47
    LT    shift, and go to state 48
    GT    shift, and go to state 49
    '+'   shift, and go to state 50
    '-'   shift, and go to state 51
    '*'   shift, and go to state 52
    '/'   shift, and go to state 53
    '{'   shift, and go to state 59


State 32

   12 STMT_ASSGN: ID ASGN . EXP ';'

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 60


State 33

    2 STMTS: '{' STMT1 '}' .

    $default  reduce using rule 2 (STMTS)


State 34

    3 STMT1: STMT STMT1 .

    $default  reduce using rule 3 (STMT1)


State 35

   11 STMT_DECLARE: TYPE ID . IDS

    ';'  shift, and go to state 61
    ','  shift, and go to state 62

    IDS  go to state 63


State 36

   39 EXP: EXP . LT EXP
   40    | EXP . LE EXP
   41    | EXP . GT EXP
   42    | EXP . GE EXP
   43    | EXP . NE EXP
   44    | EXP . EQ EXP
   45    | EXP . '+' EXP
   46    | EXP . '-' EXP
   47    | EXP . '*' EXP
   48    | EXP . '/' EXP
   49    | EXP . LOR EXP
   50    | EXP . LAND EXP
   51    | EXP . BOR EXP
   52    | EXP . BXOR EXP
   53    | EXP . BAND EXP
   54    | EXP . INC
   55    | EXP . DEC
   56    | '(' EXP . ')'

    INC   shift, and go to state 37
    DEC   shift, and go to state 38
    LOR   shift, and go to state 39
    LAND  shift, and go to state 40
    BOR   shift, and go to state 41
    BXOR  shift, and go to state 42
    BAND  shift, and go to state 43
    EQ    shift, and go to state 44
    NE    shift, and go to state 45
    LE    shift, and go to state 46
    GE    shift, and go to state 47
    LT    shift, and go to state 48
    GT    shift, and go to state 49
    '+'   shift, and go to state 50
    '-'   shift, and go to state 51
    '*'   shift, and go to state 52
    '/'   shift, and go to state 53
    ')'   shift, and go to state 64


State 37

   54 EXP: EXP INC .

    $default  reduce using rule 54 (EXP)


State 38

   55 EXP: EXP DEC .

    $default  reduce using rule 55 (EXP)


State 39

   49 EXP: EXP LOR . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 65


State 40

   50 EXP: EXP LAND . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 66


State 41

   51 EXP: EXP BOR . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 67


State 42

   52 EXP: EXP BXOR . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 68


State 43

   53 EXP: EXP BAND . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 69


State 44

   44 EXP: EXP EQ . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 70


State 45

   43 EXP: EXP NE . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 71


State 46

   40 EXP: EXP LE . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 72


State 47

   42 EXP: EXP GE . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 73


State 48

   39 EXP: EXP LT . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 74


State 49

   41 EXP: EXP GT . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 75


State 50

   45 EXP: EXP '+' . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 76


State 51

   46 EXP: EXP '-' . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 77


State 52

   47 EXP: EXP '*' . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 78


State 53

   48 EXP: EXP '/' . EXP

    NUM   shift, and go to state 25
    DNUM  shift, and go to state 26
    ID    shift, and go to state 27
    '('   shift, and go to state 28

    EXP  go to state 79


State 54

   20 WHILEBODY: STMTS .

    $default  reduce using rule 20 (WHILEBODY)


State 55

   21 WHILEBODY: STMT .

    $default  reduce using rule 21 (WHILEBODY)


State 56

   19 STMT_WHILE: WHILE EXP WHILEBODY .

    $default  reduce using rule 19 (STMT_WHILE)


State 57

   15 STMT_IF: IF EXP STMTS . ELSE_STMT

    ELSE  shift, and go to state 80

    ELSE      [reduce using rule 18 (ELSE_STMT)]
    $default  reduce using rule 18 (ELSE_STMT)

    ELSE_STMT  go to state 81


State 58

   13 STMT_IF: IF EXP STMT .
   14        | IF EXP STMT . ELSE_STMT

    ELSE  shift, and go to state 80

    INT       reduce using rule 13 (STMT_IF)
    INT       [reduce using rule 18 (ELSE_STMT)]
    FLOAT     reduce using rule 13 (STMT_IF)
    FLOAT     [reduce using rule 18 (ELSE_STMT)]
    VOID      reduce using rule 13 (STMT_IF)
    VOID      [reduce using rule 18 (ELSE_STMT)]
    WHILE     reduce using rule 13 (STMT_IF)
    WHILE     [reduce using rule 18 (ELSE_STMT)]
    IF        reduce using rule 13 (STMT_IF)
    IF        [reduce using rule 18 (ELSE_STMT)]
    ELSE      [reduce using rule 18 (ELSE_STMT)]
    SWITCH    reduce using rule 13 (STMT_IF)
    SWITCH    [reduce using rule 18 (ELSE_STMT)]
    CASE      reduce using rule 13 (STMT_IF)
    CASE      [reduce using rule 18 (ELSE_STMT)]
    BREAK     reduce using rule 13 (STMT_IF)
    BREAK     [reduce using rule 18 (ELSE_STMT)]
    DEFAULT   reduce using rule 13 (STMT_IF)
    DEFAULT   [reduce using rule 18 (ELSE_STMT)]
    ID        reduce using rule 13 (STMT_IF)
    ID        [reduce using rule 18 (ELSE_STMT)]
    '}'       reduce using rule 13 (STMT_IF)
    '}'       [reduce using rule 18 (ELSE_STMT)]
    ';'       reduce using rule 13 (STMT_IF)
    ';'       [reduce using rule 18 (ELSE_STMT)]
    $default  reduce using rule 13 (STMT_IF)

    ELSE_STMT  go to state 82


State 59

   22 STMT_SWITCH: SWITCH EXP '{' . SWITCHBODY '}'

    CASE  shift, and go to state 83

    $default  reduce using rule 26 (CASES)

    SWITCHBODY  go to state 84
    CASES       go to state 85


State 60

   12 STMT_ASSGN: ID ASGN EXP . ';'
   39 EXP: EXP . LT EXP
   40    | EXP . LE EXP
   41    | EXP . GT EXP
   42    | EXP . GE EXP
   43    | EXP . NE EXP
   44    | EXP . EQ EXP
   45    | EXP . '+' EXP
   46    | EXP . '-' EXP
   47    | EXP . '*' EXP
   48    | EXP . '/' EXP
   49    | EXP . LOR EXP
   50    | EXP . LAND EXP
   51    | EXP . BOR EXP
   52    | EXP . BXOR EXP
   53    | EXP . BAND EXP
   54    | EXP . INC
   55    | EXP . DEC

    INC   shift, and go to state 37
    DEC   shift, and go to state 38
    LOR   shift, and go to state 39
    LAND  shift, and go to state 40
    BOR   shift, and go to state 41
    BXOR  shift, and go to state 42
    BAND  shift, and go to state 43
    EQ    shift, and go to state 44
    NE    shift, and go to state 45
    LE    shift, and go to state 46
    GE    shift, and go to state 47
    LT    shift, and go to state 48
    GT    shift, and go to state 49
    '+'   shift, and go to state 50
    '-'   shift, and go to state 51
    '*'   shift, and go to state 52
    '/'   shift, and go to state 53
    ';'   shift, and go to state 86


State 61

   34 IDS: ';' .

    $default  reduce using rule 34 (IDS)


State 62

   35 IDS: ',' . ID IDS

    ID  shift, and go to state 87


State 63

   11 STMT_DECLARE: TYPE ID IDS .

    $default  reduce using rule 11 (STMT_DECLARE)


State 64

   56 EXP: '(' EXP ')' .

    $default  reduce using rule 56 (EXP)


State 65

   39 EXP: EXP . LT EXP
   40    | EXP . LE EXP
   41    | EXP . GT EXP
   42    | EXP . GE EXP
   43    | EXP . NE EXP
   44    | EXP . EQ EXP
   45    | EXP . '+' EXP
   46    | EXP . '-' EXP
   47    | EXP . '*' EXP
   48    | EXP . '/' EXP
   49    | EXP . LOR EXP
   49    | EXP LOR EXP .
   50    | EXP . LAND EXP
   51    | EXP . BOR EXP
   52    | EXP . BXOR EXP
   53    | EXP . BAND EXP
   54    | EXP . INC
   55    | EXP . DEC

    INC   shift, and go to state 37
    DEC   shift, and go to state 38
    LAND  shift, and go to state 40
    BOR   shift, and go to state 41
    BXOR  shift, and go to state 42
    BAND  shift, and go to state 43
    EQ    shift, and go to state 44
    NE    shift, and go to state 45
    LE    shift, and go to state 46
    GE    shift, and go to state 47
    LT    shift, and go to state 48
    GT    shift, and go to state 49
    '+'   shift, and go to state 50
    '-'   shift, and go to state 51
    '*'   shift, and go to state 52
    '/'   shift, and go to state 53

    INC       [reduce using rule 49 (EXP)]
    DEC       [reduce using rule 49 (EXP)]
    $default  reduce using rule 49 (EXP)


State 66

   39 EXP: EXP . LT EXP
   40    | EXP . LE EXP
   41    | EXP . GT EXP
   42    | EXP . GE EXP
   43    | EXP . NE EXP
   44    | EXP . EQ EXP
   45    | EXP . '+' EXP
   46    | EXP . '-' EXP
   47    | EXP . '*' EXP
   48    | EXP . '/' EXP
   49    | EXP . LOR EXP
   50    | EXP . LAND EXP
   50    | EXP LAND EXP .
   51    | EXP . BOR EXP
   52    | EXP . BXOR EXP
   53    | EXP . BAND EXP
   54    | EXP . INC
   55    | EXP . DEC

    INC   shift, and go to state 37
    DEC   shift, and go to state 38
    BOR   shift, and go to state 41
    BXOR  shift, and go to state 42
    BAND  shift, and go to state 43
    EQ    shift, and go to state 44
    NE    shift, and go to state 45
    LE    shift, and go to state 46
    GE    shift, and go to state 47
    LT    shift, and go to state 48
    GT    shift, and go to state 49
    '+'   shift, and go to state 50
    '-'   shift, and go to state 51
    '*'   shift, and go to state 52
    '/'   shift, and go to state 53

    INC       [reduce using rule 50 (EXP)]
    DEC       [reduce using rule 50 (EXP)]
    $default  reduce using rule 50 (EXP)


State 67

   39 EXP: EXP . LT EXP
   40    | EXP . LE EXP
   41    | EXP . GT EXP
   42    | EXP . GE EXP
   43    | EXP . NE EXP
   44    | EXP . EQ EXP
   45    | EXP . '+' EXP
   46    | EXP . '-' EXP
   47    | EXP . '*' EXP
   48    | EXP . '/' EXP
   49    | EXP . LOR EXP
   50    | EXP . LAND EXP
   51    | EXP . BOR EXP
   51    | EXP BOR EXP .
   52    | EXP . BXOR EXP
   53    | EXP . BAND EXP
   54    | EXP . INC
   55    | EXP . DEC

    INC   shift, and go to state 37
    DEC   shift, and go to state 38
    BXOR  shift, and go to state 42
    BAND  shift, and go to state 43
    EQ    shift, and go to state 44
    NE    shift, and go to state 45
    LE    shift, and go to state 46
    GE    shift, and go to state 47
    LT    shift, and go to state 48
    GT    shift, and go to state 49
    '+'   shift, and go to state 50
    '-'   shift, and go to state 51
    '*'   shift, and go to state 52
    '/'   shift, and go to state 53

    INC       [reduce using rule 51 (EXP)]
    DEC       [reduce using rule 51 (EXP)]
    $default  reduce using rule 51 (EXP)


State 68

   39 EXP: EXP . LT EXP
   40    | EXP . LE EXP
   41    | EXP . GT EXP
   42    | EXP . GE EXP
   43    | EXP . NE EXP
   44    | EXP . EQ EXP
   45    | EXP . '+' EXP
   46    | EXP . '-' EXP
   47    | EXP . '*' EXP
   48    | EXP . '/' EXP
   49    | EXP . LOR EXP
   50    | EXP . LAND EXP
   51    | EXP . BOR EXP
   52    | EXP . BXOR EXP
   52    | EXP BXOR EXP .
   53    | EXP . BAND EXP
   54    | EXP . INC
   55    | EXP . DEC

    INC   shift, and go to state 37
    DEC   shift, and go to state 38
    BAND  shift, and go to state 43
    EQ    shift, and go to state 44
    NE    shift, and go to state 45
    LE    shift, and go to state 46
    GE    shift, and go to state 47
    LT    shift, and go to state 48
    GT    shift, and go to state 49
    '+'   shift, and go to state 50
    '-'   shift, and go to state 51
    '*'   shift, and go to state 52
    '/'   shift, and go to state 53

    INC       [reduce using rule 52 (EXP)]
    DEC       [reduce using rule 52 (EXP)]
    $default  reduce using rule 52 (EXP)


State 69

   39 EXP: EXP . LT EXP
   40    | EXP . LE EXP
   41    | EXP . GT EXP
   42    | EXP . GE EXP
   43    | EXP . NE EXP
   44    | EXP . EQ EXP
   45    | EXP . '+' EXP
   46    | EXP . '-' EXP
   47    | EXP . '*' EXP
   48    | EXP . '/' EXP
   49    | EXP . LOR EXP
   50    | EXP . LAND EXP
   51    | EXP . BOR EXP
   52    | EXP . BXOR EXP
   53    | EXP . BAND EXP
   53    | EXP BAND EXP .
   54    | EXP . INC
   55    | EXP . DEC

    INC  shift, and go to state 37
    DEC  shift, and go to state 38
    EQ   shift, and go to state 44
    NE   shift, and go to state 45
    LE   shift, and go to state 46
    GE   shift, and go to state 47
    LT   shift, and go to state 48
    GT   shift, and go to state 49
    '+'  shift, and go to state 50
    '-'  shift, and go to state 51
    '*'  shift, and go to state 52
    '/'  shift, and go to state 53

    INC       [reduce using rule 53 (EXP)]
    DEC       [reduce using rule 53 (EXP)]
    $default  reduce using rule 53 (EXP)


State 70
